# termite-biotech-and-unbounded

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  index.html  pyproject.toml  requirements.txt  robots.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  guestbook.yml
.github/workflows/: ci.yml
chronosend/: .dockerignore  .env.example  .eslintrc.json  .gitignore  DEPLOYMENT.md  FEATURES.md  README.md  cloudflared-login-err.txt  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  termite-analysis.py
chronosend/docker/: Dockerfile.server  Dockerfile.web  nginx.conf
chronosend/e2e/: auth.spec.ts  messages.spec.ts  playwright.config.ts  settings.spec.ts
chronosend/scripts/: gen-icons.mjs
supabase/: schema.sql
termite-projects/: CROSS-VERIFICATION.md  MASTER-PROJECT-SUMMARY.md  README.md
termite-projects/biofuel-research/: README.md
termite-projects/funding-partnerships/: 01-executive-summary.md  02-dost-pcaarrd-grant-proposal.md  03-academic-partnership-proposal.md  04-industry-partnership-outreach.md  05-financial-projections-template.md  06-risk-assessment-matrix.md  07-pitch-deck-outline.md  README-summary.md
termite-projects/natural-pest-control/: README.md
termite-projects/presentations/: INVESTOR-QA-PREP.md  PITCH-DECK-SLIDES.md  PRESS-RELEASE.md  README.md  SHARK-TANK-PITCH-SCRIPT.md
termite-projects/termite-farming/: README.md
unbounded/: CONTRIBUTING.md  GOVERNANCE.md  README.md  WELCOME.md  run.py
(+208 files in other folders)
